# python-pmc-restapi-client

./: .gitignore  README.md  setup.cfg  tox.ini
misc/: .init.rc  run_bash.sh  run_mkdocs_build.sh  run_mkdocs_deploy.sh  run_mkdocs_serve.sh  run_pip_install_req_dev.sh  run_pip_multi.sh  run_tests_pytest.sh  run_tests_tox_p.sh
requirements/: base.in  base.txt  dev.in  dev.txt  test.in  test.txt
src/pmc/restapi-client/: __init__.py  core.py
src/pmc/restapi_client/: __init__.py  api.py  exceptions.py  ppformat.py  session.py  types.py
tests/: test_restapi-client.py  test_restapi_client.py  test_types.py
