[metadata]
name = pmc-restapi-client
maintainer = Andrei Kolotev
maintainer-email = kolotev@ncbi.nlm.nih.gov
home-page = https://bitbucket.ncbi.nlm.nih.gov/projects/PMC/repos/python-pmc-restapi-client/browse
license = Public Domain 
description = pmc-restapi-client is a Python package that provides a simple way to communicate to RESTful APIs. 
long_description = README.md
long_description_content_type = text/markdown
classifiers = Development Status :: 4 - Beta
        
        
[files]
packages_root = src
package_dir = src
include_package_data = True
namespace_packages = pmc




[bdist_wheel]
universal = true
